refactor: split OS and SnappCloud versions

--- a/.github/workflows/image.yaml
+++ b/.github/workflows/image.yaml
@@ -1,9 +1,10 @@
-name: Build Container Image
+name: Build and push container image
 
 on:
   push:
     tags:
       - 'v*'
+      - 'snappcloud-v*'
 
 jobs:
   docker:
